# test-repo

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.cfg
tests/: test_module.py
