[metadata]
name = trepo
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A brief description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/my_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
#packages = find:
#    where = src
python_requires = >=3.6
#install_requires =
    # List your package dependencies here
    #git@github.com:cma-open/workflows.git
    #git@github.com:cma-open/scripts.git
    #git@github.com:cma-open/environment.git

[options.extras_require]
testing =
    pytest